about notes, pricing updates, add link to YYH

--- a/NODE-APP/src/components/About.astro
+++ b/NODE-APP/src/components/About.astro
@@ -31,11 +31,13 @@ import chadimg from '@assets/chad-dupuis-acupuncturist-yinyanghouse-twin-cities-
       <h3 class="text-2xl font-bold mb-2 text-center">Chad Dupuis, L.Ac., Dipl.Ac.</h3>
       <p class="font-semibold mb-4 text-center">Acupuncturist / Owner</p>
       <div class="w-full">
-        <p class="m-0">Chad has over 20 years of experience in treating a broad range of conditions, particularly those deemed "difficult to treat".  Voted "best of the best" acupuncturist many years in a row at the clinic he founded in <a href="https://yyhchattanooga.com/">Chattanooga</a> before returning to the midwest.</p>
+        <p class="m-0">Chad has over 20 years of experience in helping people of all ages with nearly any set of of physical and/or mental health issues.  Voted the "<a href="https://gallery.bestofchatt.com/places/view/559/yin_yang_house_acupuncture_and_wellness_center.html">best of the best</a>" acupuncturist by his many thousands of patients, many years in a row, at the clinic he founded in <a href="https://yyhchattanooga.com/">Chattanooga</a> before he returned with his wife and two young boys to the midwest.</p>
         <br />
-        <p class="m-0">He utilizes a range of techniques tailored to each individual patient but draws heavily from the founder of Tong Ren Therapy, Master Tom Tam, whom he has studied with, worked with, and continues to learn from for nearly 30 years.</p>
+        <p class="m-0">He utilizes a range of techniques tailored to each individual patient, drawing heavily from the founder of Tong Ren Therapy, <a href="https://tongrenstation.com/uncategorized/tom-tam-bio/?sfw=pass1759177119">Master Tom Tam</a>, whom he has studied with, worked with, and continues to learn from for three decades.</p>
         <br />
-        <p class="m-0">He is a perpetual student and prolific writer and explorer who shares his knowledge freely through the <a href="https://yinyanghouse.com/">Yin Yang House</a> website.  His site has helped teachers, practitioners, and the general public alike explore the foundations and workings of Chinese Medicine and associated systems.</p>
+        <p class="m-0">He is a perpetual student, prolific writer, and explorer who shares his knowledge freely through the <a href="https://yinyanghouse.com/">Yin Yang House</a> website.  His site has helped teachers, practitioners, and the general public alike explore the foundations and workings of Chinese Medicine and associated systems.</p>
+        <br />
+        <p class="m-0">He is also an avid meditator and qigong/tai chi practitioner who has studied and taught for over 30 years.  He offers classes utilizing these techniques to help his patients improve their health.</p>
       </div>
     </div>
 </section>
