--- a/NODE-APP/src/components/Scheduling.astro
+++ b/NODE-APP/src/components/Scheduling.astro
@@ -1,7 +1,7 @@
 <section id="schedule" class="pt-28 pb-16 bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100">
   <!-- Card wrapper: centered with internal padding so content isn't flush to edges -->
   <div class="w-full sm:w-4/5 mx-auto bg-white dark:bg-gray-800 rounded-xl shadow p-6">
-  <h3 class="font-headers">We are currently exploring options for our Twin Cities location, stay tuned!  If you'd like to be added to our waitlist/announcement list, free free to email your request to <a href="mailto:tc@yyhmsg.net">tc [at] yyhmsg.net</a>.  Thank you!</h3>
+  <h3 class="font-headers">We are currently exploring options for our Twin Cities location, stay tuned!  If you'd like to be added to our waitlist/announcement list, feel free to email your request to <a href="mailto:tc@yyhmsg.net">tc [at] yyhmsg.net</a>.  Thank you!</h3>
     <div class="relative">
         <!-- Direct Square Appointments iframe embed (reliable inside Astro) -->
         <iframe
