--- a/NODE-APP/src/components/Footer.astro
+++ b/NODE-APP/src/components/Footer.astro
@@ -33,7 +33,7 @@ import linkedin from '@assets/linkedin-logo.webp';
   </a>
 </li>
 <li>
-  <a href="https://bsky.app/profile/yinyanghouse.bsky.social" target="_blank" rel="noopener noreferrer" class="text-white hover:text-gray-300">
+  <a href="https://bsky.app/profile/yinyanghouse.com" target="_blank" rel="noopener noreferrer" class="text-white hover:text-gray-300">
     <img 
         src={bluesky.src} 
         alt="bluesky"
