breadcrumb fixes, package updates

--- a/NODE-APP/src/components/Reviews.astro
+++ b/NODE-APP/src/components/Reviews.astro
@@ -69,7 +69,7 @@ const reviews = [
       <a href="/questions" class="inline-block bg-[#5cc4b5] hover:bg-[#4a9b8f] text-white px-8 py-3 rounded-lg font-semibold transition mr-4">
         Learn More
       </a>
-      <a href="/scheduling" class="inline-block bg-[#7BBF67] hover:bg-[#679F5A] text-white px-8 py-3 rounded-lg font-semibold transition">
+      <a href="/appointments" class="inline-block bg-[#7BBF67] hover:bg-[#679F5A] text-white px-8 py-3 rounded-lg font-semibold transition">
         Schedule Appointment
       </a>
     </div>
