--- a/NODE-APP/src/pages/appointments/index.astro
+++ b/NODE-APP/src/pages/appointments/index.astro
@@ -4,6 +4,7 @@ import Layout from '@layouts/Layout.astro';
 import Scheduling from "@components/Scheduling.astro";
 const pageData = {
 	title: "Acupuncture, Massage and Wellness Appointment Scheduling",
+	breadcrumbTitle: "Minneapolis, St. Paul Acupuncture Appointment Scheduling - Yin Yang House",
 	date: "",
 	slug: "appointments",
 	author: "",
