--- a/NODE-APP/src/pages/chad-dupuis-acupuncturist-minneapolis/index.astro
+++ b/NODE-APP/src/pages/chad-dupuis-acupuncturist-minneapolis/index.astro
@@ -3,7 +3,7 @@ import "@styles";
 import Layout from '@layouts/Layout.astro';
 import chadPhoto from '@assets/chad-dupuis-acupuncturist-yinyanghouse-twin-cities-acupuncture-280.webp';
 const pageData = {
-	title: "Chad Dupuis, Licensed Acupuncturist - Minneapolis Acupuncture Expert",
+	title: "Chad Dupuis, Licensed Acupuncturist - Minneapolis, St. Paul Acupuncturist",
 	date: "",
 	slug: "",
 	author: "",
