--- a/NODE-APP/src/pages/conditions/index.astro
+++ b/NODE-APP/src/pages/conditions/index.astro
@@ -4,6 +4,7 @@ import Layout from '@layouts/Layout.astro';
 import Conditions from "@components/Conditions.astro";
 const pageData = {
 	title: "Health Conditions Treated with Acupuncture Minneapolis St Paul - Yin Yang House",
+	breadcrumbTitle: "Issues and Conditions Helped with Acupuncture",
 	date: "",
 	slug: "",
 	author: "",
