--- a/NODE-APP/src/pages/fees/index.astro
+++ b/NODE-APP/src/pages/fees/index.astro
@@ -4,6 +4,7 @@ import Layout from '@layouts/Layout.astro';
 import Fees from "@components/Fees.astro";
 const pageData = {
 	title: "Acupuncture Fees & Insurance - Yin Yang House Twin Cities",
+	breadcrumbTitle: "Yin Yang House Acupuncture Center - Fees and Payment Policies",
 	date: "",
 	slug: "",
 	author: "",
