--- a/NODE-APP/src/pages/questions/index.astro
+++ b/NODE-APP/src/pages/questions/index.astro
@@ -4,6 +4,7 @@ import Layout from '@layouts/Layout.astro';
 import Questions from "@components/Questions.astro";
 const pageData = {
 	title: "Acupuncture FAQ Minneapolis St Paul - Common Questions Answered",
+	breadcrumbTitle: "Acupuncture Common Questions - Yin Yang House Twin Cities",
 	date: "",
 	slug: "",
 	author: "",
