--- a/NODE-APP/src/pages/services/index.astro
+++ b/NODE-APP/src/pages/services/index.astro
@@ -7,6 +7,7 @@ import herbalImg from '@assets/chinese-herbal-medicine-minneapolis-yinyanghouse.
 import taichiImg from '@assets/yang-tai-chi-minneapolis-yinyanghouse.png';
 const pageData = {
 	title: "Acupuncture Services Minneapolis St Paul - Yin Yang House Twin Cities",
+	breadcrumbTitle: "Yin Yang House Twin Cities Acupuncture Services",
 	date: "",
 	slug: "",
 	author: "",
