--- a/NODE-APP/src/layouts/Layout.astro
+++ b/NODE-APP/src/layouts/Layout.astro
@@ -168,7 +168,16 @@ const jsonLdFull = {
         <meta name="title" content={thisTitle} />
         <meta name="description" content={thisDescription} />
         <meta name="keywords" content={typeof thisKeywords === 'string' ? thisKeywords : Array.isArray(thisKeywords) ? thisKeywords.join(', ') : ''} />
+        <!-- Google Analytics -->
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-6NTHEYDBR6"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
+            gtag('config', 'G-6NTHEYDBR6');
+        </script>
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content={isArticle ? 'article' : 'website'} />
         <meta property="og:url" content={currentUrl.toString()} />
